--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 .idea/
 # if you remove the above rule, at least ignore the following:
 
+
 # User-specific stuff:
 # .idea/workspace.xml
 # .idea/tasks.xml
@@ -105,4 +106,21 @@ docs/_build/
 # PyBuilder
 target/
 
-# Created by .ignore support plugin (hsz.mobi)
+# User-specific stuff:
+# .idea/workspace.xml
+# .idea/tasks.xml
+# .idea/dictionaries
+
+# Sensitive or high-churn files:
+# .idea/dataSources.ids
+# .idea/dataSources.xml
+# .idea/sqlDataSources.xml
+# .idea/dynamic.xml
+# .idea/uiDesigner.xml
+
+# Gradle:
+# .idea/gradle.xml
+# .idea/libraries
+
+# Mongo Explorer plugin:
+# .idea/mongoSettings.xml
